--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ branches:
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended
   texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
+- sudo tlmgr update --self
 - sudo tlmgr install xcolor
 script:
 - mkdir _build
