--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ branches:
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended
   texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
-install:
+#install:
 # Latex requirements
-- PATH=$HOME/texlive/bin/x86_64-linux:$PATH
-- tlmgr option repository ftp://tug.org/historic/systems/texlive/2015/tlnet-final
-- tlmgr update --self
-- tlmgr install xcolor
+#- PATH=$HOME/texlive/bin/x86_64-linux:$PATH
+#- tlmgr option repository ftp://tug.org/historic/systems/texlive/2015/tlnet-final
+#- tlmgr update --self
+#- tlmgr install xcolor
 script:
 - mkdir _build
 - pdflatex -interaction=nonstopmode -halt-on-error cv.tex
