--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+LATEX       = xelatex
+
 sudo: required
 dist: trusty
 branches:
@@ -24,8 +26,8 @@ addons:
             - lmodern
 script:
 - mkdir _build
-- pdflatex -interaction=nonstopmode -halt-on-error cv.tex
-- pdflatex -interaction=nonstopmode -halt-on-error cv.tex
+- ${LATEX} -interaction=nonstopmode -halt-on-error cv.tex
+- ${LATEX} -interaction=nonstopmode -halt-on-error cv.tex
 after_success:
 - test $TRAVIS_BRANCH == "master" && bash
   deploy.sh
