--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ addons:
             - texlive-fonts-extra
             - latex-xcolor
             - lmodern
+            - miktex-pgf
 script:
 - mkdir _build
 - xelatex -interaction=nonstopmode -halt-on-error cv.tex
