--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ addons:
             - texlive-fonts-extra
             - latex-xcolor
             - lmodern
-            - textlive-pgf
+            - texlive-pgf
 script:
 - mkdir _build
 - xelatex -interaction=nonstopmode -halt-on-error cv.tex
